# pr-tica9-fullcycle

./: README.md  data_test.py  pyproject.toml  random_number.py
